--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   lint:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
