--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -7,7 +7,9 @@ on:
   pull_request:
     branches:
       - main
-
+defaults:
+  run:
+    working-directory: ./
 jobs:
   lint:
     runs-on: ubuntu-latest
