--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -2,11 +2,9 @@ name: API CI
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    paths:
+      - "./**"
+      - ".github/workflows/api-ci.yml"
 defaults:
   run:
     working-directory: ./
