--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -1,20 +1,23 @@
-name: API CI
+name: API-CI
 
+#on: [push]
 on:
   push:
     paths:
       - "./**"
       - ".github/workflows/api-ci.yml"
+
 defaults:
   run:
     working-directory: ./
+
 jobs:
-  lint:
+  linter:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up Nodejs
+      - name: Setup Nodejs
         uses: actions/setup-node@v3
         with:
           node-version: 16
@@ -25,4 +28,4 @@ jobs:
         run: npm ci
       - name: run linter
         shell: bash
-        run: yarn lint
+        run: npm run lint
