--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -17,15 +17,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Nodejs
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: 'npm'
-          cache-dependency-path: ./package-lock.json
-      - name: install
+          cache: 'yarn'
+          cache-dependency-path: ./yarn.lock
+      - name: Install dependencies
         shell: bash
-        run: npm ci
-      - name: run linter
+        run: yarn install --frozen-lockfile
+      - name: Run linter
         shell: bash
-        run: npm run lint
+        run: yarn lint
