--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -11,7 +11,6 @@ defaults:
   run:
     working-directory: ./
 
-
 jobs:
   linter:
     runs-on: ubuntu-latest
@@ -30,3 +29,20 @@ jobs:
       - name: Run linter
         shell: bash
         run: yarn lint
+  api_test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'yarn'
+          cache-dependency-path: ./yarn.lock
+      - name: Install dependencies
+        shell: bash
+        run: yarn install --frozen-lockfile
+      - name: Run test
+        shell: bash
+        run: yarn test
