--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -3,6 +3,8 @@ name: API-CI
 #on: [push]
 on:
   push:
+    branches:
+      - main
     paths:
       - "./**"
       - ".github/workflows/api-ci.yml"
